--- a/src/components/dashHome/dashHome.scss
+++ b/src/components/dashHome/dashHome.scss
@@ -1,2 +1,21 @@
 .dashHome_container {
+  .chart_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    padding: 2rem;
+    h2 {
+      color: #00f69e;
+    }
+    .chart {
+      width: 40vw;
+      background-color: rgb(7, 7, 12);
+      padding: 2rem;
+      //   margin: 5rem;
+      border-radius: 10px;
+      box-shadow: 0px 0px 10px rgb(54, 69, 155);
+      color: #fff;
+    }
+  }
 }
