--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,7 +1,7 @@
 @use "../../App.scss" as *;
 .hero_container {
   position: relative;
-  height: 300vh;
+  // height: 300vh;
 }
 .pos_absolute {
   position: absolute;
