--- a/src/components/dash/dash.scss
+++ b/src/components/dash/dash.scss
@@ -1,21 +1,25 @@
 .dash_cont {
   background: #1b1c31;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
+  justify-content: space-between;
   .dash_side {
-    background-color: #222338;
-    height: 100%;
-    width: 13%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 5rem;
     flex-shrink: 0;
-    .dash_logo {
-      padding: 2rem 1rem;
-      max-width: 100%;
-      cursor: pointer;
+    background-color: #222338;
+    width: 16vw;
+    .pos_fixed {
+      position: fixed;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 5rem;
+      width: 16vw;
+      .dash_logo {
+        padding: 2rem 1rem;
+        width: 100%;
+        cursor: pointer;
+      }
     }
   }
 }
@@ -34,14 +38,52 @@
     padding: 16px;
     gap: 20px;
     cursor: pointer;
-
     transition: 0.6s;
     &:hover {
       background-color: #00ffc38e;
+      color: #fff;
     }
   }
   .active_dash_link {
     background: linear-gradient(to right, #1566fd21, #00ffc38e);
     color: #15bffd;
   }
+}
+.dash_head {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  padding: 1.2rem;
+  gap: 1.2rem;
+  img {
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
+  }
+  .dash_header_profile {
+    border-radius: 50%;
+  }
+  .not_bell_container {
+    position: relative;
+    cursor: pointer;
+    p {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 15px;
+      height: 15px;
+      background-color: #ff5630;
+      border-radius: 50%;
+      color: #ffff;
+      font-size: 9px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
+.dash_right {
+  width: 100%;
+  overflow: hidden;
 }
