--- a/src/components/dashHome/dashHome.scss
+++ b/src/components/dashHome/dashHome.scss
@@ -1,21 +1,137 @@
 .dashHome_container {
-  .chart_container {
+  .dashboard_pending_container {
+    .pending_form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 4rem;
+      width: 40vw;
+      top: -100vh;
+      left: 0;
+      position: fixed;
+      background: #101d18ec;
+      width: 100%;
+      height: 100vh;
+      transition: 0.4s;
+      z-index: 200;
+      .pending_form_header {
+        width: 50vw;
+        justify-content: space-between;
+        display: flex;
+        align-items: center;
+        .pending_logo {
+          width: 7rem;
+        }
+        .close_pending {
+          width: 3rem;
+          cursor: pointer;
+          filter: invert(80%) sepia(48%) saturate(4362%) hue-rotate(106deg)
+            brightness(103%) contrast(101%);
+        }
+      }
+      form {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+
+        gap: 2rem;
+        .pending_div {
+          color: #00f69e;
+          display: flex;
+          flex-direction: column;
+          gap: 0.2rem;
+          input {
+            padding: 1rem;
+            border-radius: 4px;
+            border: none;
+            outline: none;
+            &:focus {
+              outline: 1px solid #00f69e;
+            }
+          }
+        }
+      }
+      .pending_btn_container {
+        display: flex;
+        gap: 1rem;
+        align-items: center;
+        button {
+          padding: 0.5rem 2rem;
+          background-color: #00f69e;
+          border: none;
+          cursor: pointer;
+          border-radius: 4px;
+          color: #222338;
+          font-weight: 500;
+          transition: 0.2s;
+          &:hover {
+            background-color: #222338;
+            color: #00f69e;
+            outline: 1px solid #00f69e;
+          }
+        }
+        p {
+          color: #00f69e;
+        }
+      }
+    }
+    margin: 3rem;
+    h2 {
+      color: #00f69e;
+      margin-bottom: 2rem;
+    }
+    .dashboard_pendings {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      justify-content: space-between;
+      .dashboard_pending {
+        background-color: #222338;
+        color: #fff;
+        padding: 2rem;
+        width: 20rem;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        border-radius: 10px;
+        cursor: pointer;
+        transition: 0.5s;
+        span {
+          color: #00f69e;
+        }
+        &:hover {
+          transform: scale(1.07);
+        }
+      }
+    }
+  }
+  .charts_container {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2rem;
     padding: 2rem;
+    margin-top: 5rem;
     h2 {
       color: #00f69e;
     }
-    .chart {
-      width: 40vw;
-      background-color: rgb(7, 7, 12);
-      padding: 2rem;
-      //   margin: 5rem;
-      border-radius: 10px;
-      box-shadow: 0px 0px 10px rgb(54, 69, 155);
-      color: #fff;
+    .chart_container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 2rem;
+      .chart {
+        width: 40vw;
+        background-color: rgb(7, 7, 12);
+        padding: 2rem;
+        //   margin: 5rem;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px rgb(54, 69, 155);
+        color: #fff;
+      }
     }
   }
+}
+.top_0 {
+  top: 0 !important;
 }
