--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,13 @@ $lightGrey: #c0c0c0;
 $darckGrey: #333333;
 $background: #fdf5ed;
 $gr: #7f5e46;
+// dashboard
+$rightBack: #1b1c31;
+$leftBack: #222338;
+$blueBack: #222338;
+$dashLime: #00ffc38e;
+
+// mixins
 $breack-up: (
   "small": "600px",
   "medium": "1164px",
