--- a/src/components/dash/dash.scss
+++ b/src/components/dash/dash.scss
@@ -1,12 +1,13 @@
+@use "../../App.scss" as *;
 .dash_cont {
-  background: #1b1c31;
+  background: $rightBack;
   min-height: 100vh;
   width: 100%;
   display: flex;
   justify-content: space-between;
   .dash_side {
     flex-shrink: 0;
-    background-color: #222338;
+    background-color: $leftBack;
     width: 16vw;
     .pos_fixed {
       position: fixed;
@@ -40,7 +41,7 @@
     cursor: pointer;
     transition: 0.6s;
     &:hover {
-      background-color: #00ffc38e;
+      background-color: $dashLime;
       color: #fff;
     }
   }
