--- a/src/components/dashHome/dashHome.scss
+++ b/src/components/dashHome/dashHome.scss
@@ -1,3 +1,4 @@
+@use "../../App.scss" as *;
 .dashHome_container {
   .dashboard_pending_container {
     .pending_form {
@@ -61,11 +62,11 @@
           border: none;
           cursor: pointer;
           border-radius: 4px;
-          color: #222338;
+          color: $blueBack;
           font-weight: 500;
           transition: 0.2s;
           &:hover {
-            background-color: #222338;
+            background-color: $blueBack;
             color: #00f69e;
             outline: 1px solid #00f69e;
           }
@@ -86,7 +87,7 @@
       gap: 2rem;
       justify-content: space-between;
       .dashboard_pending {
-        background-color: #222338;
+        background-color: $blueBack;
         color: #fff;
         padding: 2rem;
         width: 20rem;
