--- a/src/components/dashProfile/profile.scss
+++ b/src/components/dashProfile/profile.scss
@@ -1,3 +1,55 @@
+@use "../../App.scss" as *;
 .profile_container {
   width: fit-content;
+  padding: 5rem;
+  .profile_content {
+    display: flex;
+    gap: 5rem;
+    background-color: $blueBack;
+    padding: 3rem;
+    border-radius: 10px;
+    box-shadow: 0px 0px 30px rgba(184, 245, 176, 0.137);
+    img {
+      width: 10rem;
+      height: 10rem;
+      border-radius: 50%;
+    }
+    .profile_info {
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      .profile_input {
+        display: flex;
+        gap: 3rem;
+        justify-content: space-between;
+        align-items: center;
+        input {
+          background-color: $rightBack;
+          color: #fff;
+          padding: 10px;
+          border: none;
+          width: 20rem;
+          &:focus {
+            outline: 1px solid $dashLime;
+          }
+        }
+      }
+      .profile_btn {
+        margin-top: 2rem;
+        button {
+          padding: 0.7rem 1.5rem;
+          border: none;
+          background-color: $dashLime;
+          color: #fff;
+          border-radius: 5px;
+          cursor: pointer;
+          transition: 0.5s;
+          &:hover {
+            transform: scale(1.04);
+          }
+        }
+      }
+    }
+  }
 }
