--- a/src/App.scss
+++ b/src/App.scss
@@ -46,3 +46,12 @@ $breack-down: (
     @content;
   }
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
