--- a/src/components/dash/dash.scss
+++ b/src/components/dash/dash.scss
@@ -9,6 +9,13 @@
     flex-shrink: 0;
     background-color: $leftBack;
     width: 16vw;
+    @include breack_down(large) {
+      position: fixed;
+      left: 100%;
+      transition: 0.5s;
+      z-index: 100;
+      width: 100%;
+    }
     .pos_fixed {
       position: fixed;
       display: flex;
@@ -16,10 +23,10 @@
       align-items: center;
       gap: 5rem;
       width: 16vw;
-      .dash_logo {
-        padding: 2rem 1rem;
+      background-color: $leftBack;
+      height: 100%;
+      @include breack_down(large) {
         width: 100%;
-        cursor: pointer;
       }
     }
   }
@@ -87,4 +94,45 @@
 .dash_right {
   width: 100%;
   overflow: hidden;
+}
+.dah_open {
+  left: 0 !important;
+}
+.dash_ham {
+  position: fixed;
+  left: 1rem;
+  top: 1rem;
+  img {
+    width: 3rem;
+    cursor: pointer;
+    filter: invert(80%) sepia(48%) saturate(4362%) hue-rotate(106deg)
+      brightness(103%) contrast(101%);
+  }
+}
+.dash_logo_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 1rem;
+  .dash_logo {
+    // padding: 2rem 1rem;
+    width: 80%;
+    @include breack_down(large) {
+      width: 60%;
+    }
+    cursor: pointer;
+    img {
+      width: 100%;
+    }
+  }
+  .dash_close {
+    width: 3rem;
+    cursor: pointer;
+    filter: invert(80%) sepia(48%) saturate(4362%) hue-rotate(106deg)
+      brightness(103%) contrast(101%);
+
+    @include breack_up(medium) {
+      display: none !important;
+    }
+  }
 }
