--- a/src/components/dashProfile/profile.scss
+++ b/src/components/dashProfile/profile.scss
@@ -2,6 +2,14 @@
 .profile_container {
   width: fit-content;
   padding: 5rem;
+  @include breack_down(large) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    width: 100%;
+  }
   .profile_content {
     display: flex;
     gap: 5rem;
@@ -9,6 +17,10 @@
     padding: 3rem;
     border-radius: 10px;
     box-shadow: 0px 0px 30px rgba(184, 245, 176, 0.137);
+    @include breack_down(large) {
+      align-items: center;
+      flex-direction: column;
+    }
     img {
       width: 10rem;
       height: 10rem;
@@ -18,18 +30,28 @@
       color: #fff;
       display: flex;
       flex-direction: column;
+      @include breack_down(large) {
+        gap: 3rem;
+      }
       gap: 1rem;
       .profile_input {
         display: flex;
         gap: 3rem;
         justify-content: space-between;
         align-items: center;
+        @include breack_down(large) {
+          gap: 1rem;
+          flex-direction: column;
+        }
         input {
           background-color: $rightBack;
           color: #fff;
           padding: 10px;
           border: none;
           width: 20rem;
+          @include breack_down(large) {
+            width: 15rem;
+          }
           &:focus {
             outline: 1px solid $dashLime;
           }
