--- a/src/App.scss
+++ b/src/App.scss
@@ -25,6 +25,8 @@ $rightBack: #1b1c31;
 $leftBack: #222338;
 $blueBack: #222338;
 $dashLime: #00ffc38e;
+$tableDark: #1d3442;
+$tableLight: #26424f;
 
 // mixins
 $breack-up: (
