--- a/src/components/dashAll/all.scss
+++ b/src/components/dashAll/all.scss
@@ -1,3 +1,4 @@
+@use "../../App.scss" as *;
 .all_courses_container {
   width: 100%;
   min-height: 100vh;
@@ -7,15 +8,20 @@
   justify-content: center;
 }
 .all_courses_content {
-  width: 70vw;
+  width: 80vw;
+  @include breack_down(large) {
+    width: 98vw;
+  }
   .couses_head {
     display: flex;
     color: #fff;
-    // width: 100%;
+    @include breack_down(medium) {
+      display: none !important;
+    }
     p {
-      background-color: rgb(2, 3, 71);
+      background-color: $tableDark;
       width: 21.25%;
-      outline: 1px solid rgb(97, 99, 235);
+
       padding: 10px;
     }
   }
@@ -26,20 +32,40 @@
   color: #fff;
   width: 100%;
   text-decoration: none;
-  transition: 0.5s;
-  background-color: rgb(10, 11, 53);
-  &:hover {
-    background-color: rgb(45, 48, 235);
+  @include breack_down(medium) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    margin-top: 1rem;
   }
   .couse_cell {
     width: 21.25%;
-    outline: 1px solid rgb(97, 99, 235);
+    @include breack_down(medium) {
+      width: auto;
+    }
+    display: flex;
+    align-items: center;
     padding: 10px;
     img {
-      width: 100%;
-      height: 5rem;
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
       object-fit: cover;
     }
+  }
+}
+.course_row_light {
+  background-color: $tableLight;
+  transition: 0.5s;
+  &:hover {
+    background-color: rgb(5, 6, 58);
+  }
+}
+.course_row_dark {
+  background-color: $tableDark;
+  transition: 0.5s;
+  &:hover {
+    background-color: rgb(5, 6, 58);
   }
 }
 .row_id {
