--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   color: #fff;
-  padding: 2rem 4rem;
+  padding: 2rem 3rem;
   gap: 3rem;
   @include breack_down(large) {
     flex-direction: column;
@@ -19,6 +19,13 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    .f_icons_div {
+      display: flex;
+      gap: 10px;
+      svg {
+        flex-shrink: 0;
+      }
+    }
     @include breack_down(large) {
       width: auto;
     }
@@ -41,8 +48,8 @@
     display: flex;
     gap: 1rem;
     svg {
-      width: 3rem;
-      height: 3rem;
+      width: 2rem;
+      height: 2rem;
       cursor: pointer;
       transition: 0.3s;
       &:hover {
